@@ -1,6 +1,6 @@
 package edu.dosw.rideci.application.events.listener;
 
-import java.util.List;
+import java.util.Collections;
 
 import org.springframework.amqp.rabbit.annotation.RabbitListener;
 import org.springframework.stereotype.Component;
@@ -9,11 +9,9 @@ import edu.dosw.rideci.application.events.UserEvent;
 import edu.dosw.rideci.application.port.in.profiles.CreateProfileUseCase;
 import edu.dosw.rideci.domain.model.Profile;
 import edu.dosw.rideci.domain.model.enums.ProfileType;
-import lombok.Data;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
-@Data
 @Component
 @RequiredArgsConstructor
 @Slf4j
@@ -23,16 +21,18 @@ public class UserUpdatedListener {
 
     @RabbitListener(queues = "profile.sync.queue")
     public void handleUserUpdated(UserEvent event){
-        System.out.println("User updated event received" + event);
+        log.info("User updated event received: {}", event);
         Profile userEvent = Profile.builder()
-            .id(event.getUserId())
+            .userId(event.getUserId()) 
             .name(event.getName())
-            .vehicles(List.of())
-            .calification(null)
+            .email(event.getEmail())
+            .vehicles(Collections.emptyList())
+            .calification(null) 
             .profileType(ProfileType.NOT_DEFINED)
-            .ratings(List.of())
-            .badges(List.of())
+            .ratings(Collections.emptyList())
+            .badges(Collections.emptyList())
             .phoneNumber(event.getPhoneNumber())
+            .identificationType(event.getIdentificationType())
             .build();
         createProfileUseCase.createInitialProfile(userEvent);  
     }
